--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@million/lint": "^1.0.14",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
